# what-was-that

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  store.rs  util.rs
tests/: integration-tests.rs
