[package]
name = "what-was-that"
version = "0.1.0"
description = "A simple tool to remember little things."

[dependencies]
serde_json = "^1.0.73"
fuzzy-matcher = "^0.3.7"

[dependencies.clap]
version = "^3.0.0"
features = ["suggestions", "derive", "env"]

[dev-dependencies]
"tempfile" = "^3.1.0"
"assert_cmd" = "^2.0.2"
"predicates" = "^2.1.0"